Device Компилируется проект Visual Studio

--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -121,26 +121,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\common\commonDefines.cpp" />
-    <ClCompile Include="..\..\..\common\Display\Colors.cpp" />
-    <ClCompile Include="..\..\..\common\Display\DisplayPrimitives.cpp" />
-    <ClCompile Include="..\..\..\common\Display\Grid.cpp" />
-    <ClCompile Include="..\..\..\common\Display\Painter.cpp" />
-    <ClCompile Include="..\..\..\common\Display\PainterText.cpp" />
-    <ClCompile Include="..\..\..\common\FPGA\FPGAMath.cpp" />
-    <ClCompile Include="..\..\..\common\Hardware\Sound.cpp" />
-    <ClCompile Include="..\..\..\common\Hardware\Timer.cpp" />
-    <ClCompile Include="..\..\..\common\Menu\Menu.cpp" />
-    <ClCompile Include="..\..\..\common\Menu\MenuItems.cpp" />
-    <ClCompile Include="..\..\..\common\Menu\MenuItemsGraphics.cpp" />
-    <ClCompile Include="..\..\..\common\Menu\MenuItemsLogic.cpp" />
-    <ClCompile Include="..\..\..\common\Menu\Pages\Definition.cpp" />
-    <ClCompile Include="..\..\..\common\Settings\commonSettings.cpp" />
-    <ClCompile Include="..\..\..\common\Utils\CommonFunctions.cpp" />
-    <ClCompile Include="..\..\..\common\Utils\Map.cpp" />
-    <ClCompile Include="..\..\..\common\Utils\Math.cpp" />
-    <ClCompile Include="..\..\..\common\Utils\Measures.cpp" />
-    <ClCompile Include="..\..\..\common\Utils\StringUtils.cpp" />
+    <ClCompile Include="..\..\libs\common\commonDefines.cpp" />
+    <ClCompile Include="..\..\libs\common\Display\Colors.cpp" />
+    <ClCompile Include="..\..\libs\common\Display\DisplayPrimitives.cpp" />
+    <ClCompile Include="..\..\libs\common\Display\Grid.cpp" />
+    <ClCompile Include="..\..\libs\common\Display\Painter.cpp" />
+    <ClCompile Include="..\..\libs\common\Display\PainterText.cpp" />
+    <ClCompile Include="..\..\libs\common\FPGA\FPGAMath.cpp" />
+    <ClCompile Include="..\..\libs\common\Hardware\Sound.cpp" />
+    <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp" />
+    <ClCompile Include="..\..\libs\common\Menu\Menu.cpp" />
+    <ClCompile Include="..\..\libs\common\Menu\MenuItems.cpp" />
+    <ClCompile Include="..\..\libs\common\Menu\MenuItemsGraphics.cpp" />
+    <ClCompile Include="..\..\libs\common\Menu\MenuItemsLogic.cpp" />
+    <ClCompile Include="..\..\libs\common\Menu\Pages\Definition.cpp" />
+    <ClCompile Include="..\..\libs\common\Settings\commonSettings.cpp" />
+    <ClCompile Include="..\..\libs\common\Utils\CommonFunctions.cpp" />
+    <ClCompile Include="..\..\libs\common\Utils\Map.cpp" />
+    <ClCompile Include="..\..\libs\common\Utils\Math.cpp" />
+    <ClCompile Include="..\..\libs\common\Utils\Measures.cpp" />
+    <ClCompile Include="..\..\libs\common\Utils\StringUtils.cpp" />
     <ClCompile Include="..\..\Device53\src\Display\Display.cpp" />
     <ClCompile Include="..\..\Device53\src\Display\font\Font.cpp" />
     <ClCompile Include="..\..\Device53\src\Display\PainterMem.cpp" />
@@ -445,28 +445,28 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\common\commonDefines.h" />
-    <ClInclude Include="..\..\..\common\Display\Colors.h" />
-    <ClInclude Include="..\..\..\common\Display\DisplayPrimitives.h" />
-    <ClInclude Include="..\..\..\common\Display\DisplayTypes.h" />
-    <ClInclude Include="..\..\..\common\Display\Grid.h" />
-    <ClInclude Include="..\..\..\common\Display\Painter.h" />
-    <ClInclude Include="..\..\..\common\Display\Symbols.h" />
-    <ClInclude Include="..\..\..\common\FPGA\FPGAMath.h" />
-    <ClInclude Include="..\..\..\common\Hardware\Sound.h" />
-    <ClInclude Include="..\..\..\common\Hardware\Timer.h" />
-    <ClInclude Include="..\..\..\common\Menu\Menu.h" />
-    <ClInclude Include="..\..\..\common\Menu\MenuDrawing.h" />
-    <ClInclude Include="..\..\..\common\Menu\MenuItems.h" />
-    <ClInclude Include="..\..\..\common\Menu\MenuItemsDefs.h" />
-    <ClInclude Include="..\..\..\common\Menu\Pages\Definition.h" />
-    <ClInclude Include="..\..\..\common\Settings\commonSettings.h" />
-    <ClInclude Include="..\..\..\common\Settings\commonSettingsMath.h" />
-    <ClInclude Include="..\..\..\common\Utils\CommonFunctions.h" />
-    <ClInclude Include="..\..\..\common\Utils\Map.h" />
-    <ClInclude Include="..\..\..\common\Utils\Math.h" />
-    <ClInclude Include="..\..\..\common\Utils\Measures.h" />
-    <ClInclude Include="..\..\..\common\Utils\StringUtils.h" />
+    <ClInclude Include="..\..\libs\common\commonDefines.h" />
+    <ClInclude Include="..\..\libs\common\Display\Colors.h" />
+    <ClInclude Include="..\..\libs\common\Display\DisplayPrimitives.h" />
+    <ClInclude Include="..\..\libs\common\Display\DisplayTypes.h" />
+    <ClInclude Include="..\..\libs\common\Display\Grid.h" />
+    <ClInclude Include="..\..\libs\common\Display\Painter.h" />
+    <ClInclude Include="..\..\libs\common\Display\Symbols.h" />
+    <ClInclude Include="..\..\libs\common\FPGA\FPGAMath.h" />
+    <ClInclude Include="..\..\libs\common\Hardware\Sound.h" />
+    <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
+    <ClInclude Include="..\..\libs\common\Menu\Menu.h" />
+    <ClInclude Include="..\..\libs\common\Menu\MenuDrawing.h" />
+    <ClInclude Include="..\..\libs\common\Menu\MenuItems.h" />
+    <ClInclude Include="..\..\libs\common\Menu\MenuItemsDefs.h" />
+    <ClInclude Include="..\..\libs\common\Menu\Pages\Definition.h" />
+    <ClInclude Include="..\..\libs\common\Settings\commonSettings.h" />
+    <ClInclude Include="..\..\libs\common\Settings\commonSettingsMath.h" />
+    <ClInclude Include="..\..\libs\common\Utils\CommonFunctions.h" />
+    <ClInclude Include="..\..\libs\common\Utils\Map.h" />
+    <ClInclude Include="..\..\libs\common\Utils\Math.h" />
+    <ClInclude Include="..\..\libs\common\Utils\Measures.h" />
+    <ClInclude Include="..\..\libs\common\Utils\StringUtils.h" />
     <ClInclude Include="..\..\Device53\src\defines.h" />
     <ClInclude Include="..\..\Device53\src\Display\Display.h" />
     <ClInclude Include="..\..\Device53\src\Display\font\Font.h" />
