--- a/sources/_VS/Loader53/Loader53.vcxproj.filters
+++ b/sources/_VS/Loader53/Loader53.vcxproj.filters
@@ -43,23 +43,11 @@
     <Filter Include="FPGA">
       <UniqueIdentifier>{abb63513-dc6e-4ff0-a465-7f777ce7fb4b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="_VS">
+      <UniqueIdentifier>{b51bc987-5717-4ec9-bfc2-1baf971ac85c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Display\PainterText.cpp">
-      <Filter>Display</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Display\Painter.cpp">
-      <Filter>Display</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Display\Display.cpp">
-      <Filter>Display</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Display\Colors.cpp">
-      <Filter>Display</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Display\font\Font.cpp">
-      <Filter>Display\fonts</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\diskio.c">
       <Filter>FatFS</Filter>
     </ClCompile>
@@ -77,9 +65,6 @@
     </ClCompile>
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\option\unicode.c">
       <Filter>FatFS</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\FlashDrive\FlashDrive.cpp">
-      <Filter>FlashDrive</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Drivers\STM32F2xx_HAL_Driver\Src\stm32f2xx_hal.c">
       <Filter>HAL</Filter>
@@ -129,39 +114,6 @@
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Drivers\STM32F2xx_HAL_Driver\Src\stm32f2xx_ll_usb.c">
       <Filter>HAL</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Hardware\Timer.cpp">
-      <Filter>Hardware</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Hardware\Hardware.cpp">
-      <Filter>Hardware</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Hardware\FSMC.cpp">
-      <Filter>Hardware</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Hardware\FLASH.cpp">
-      <Filter>Hardware</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\libs\system_stm32f2xx.c">
-      <Filter>libs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\libs\usbh_conf.cpp">
-      <Filter>libs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\libs\stm32f2xx_it.cpp">
-      <Filter>libs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\libs\stm32f2xx_hal_msp.cpp">
-      <Filter>libs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Panel\Controls.cpp">
-      <Filter>Panel</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Panel\Panel.cpp">
-      <Filter>Panel</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\Settings\Settings.cpp">
-      <Filter>Settings</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Src\usbh_msc.c">
       <Filter>USBH</Filter>
     </ClCompile>
@@ -183,35 +135,68 @@
     <ClCompile Include="..\..\..\_libs\STM32Cube_F2\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_pipes.c">
       <Filter>USBH</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\globals.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\S8-53\Boot53\main.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\common\Utils\Math.cpp">
+    <ClCompile Include="..\..\libs\common\Utils\Math.cpp">
       <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Display\Colors.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Panel\Controls.cpp">
+      <Filter>Panel</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Display\Display.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Hardware\FLASH.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\FlashDrive\FlashDrive.cpp">
+      <Filter>FlashDrive</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Display\font\Font.cpp">
+      <Filter>Display\fonts</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Hardware\FSMC.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\globals.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Hardware\Hardware.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Display\Painter.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Display\PainterText.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Panel\Panel.cpp">
+      <Filter>Panel</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Settings\Settings.cpp">
+      <Filter>Settings</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\libs\stm32f2xx_hal_msp.cpp">
+      <Filter>libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\libs\stm32f2xx_it.cpp">
+      <Filter>libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\libs\system_stm32f2xx.c">
+      <Filter>libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\Hardware\Timer.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Loader53\src\libs\usbh_conf.cpp">
+      <Filter>USBH</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\Colors.h">
-      <Filter>Display</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\Display.h">
-      <Filter>Display</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\DisplayTypes.h">
-      <Filter>Display</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\Painter.h">
-      <Filter>Display</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\PainterC.h">
-      <Filter>Display</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\PainterText.h">
-      <Filter>Display</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\_libs\forVS\core_cm4.h">
       <Filter>forVS</Filter>
     </ClInclude>
@@ -281,9 +266,6 @@
     <ClInclude Include="..\..\..\_libs\forVS\core_cm3.h">
       <Filter>forVS</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Display\font\Font.h">
-      <Filter>Display\fonts</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\_libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\diskio.h">
       <Filter>FatFS</Filter>
     </ClInclude>
@@ -296,93 +278,150 @@
     <ClInclude Include="..\..\..\_libs\STM32Cube_F2\Middlewares\Third_Party\FatFs\src\drivers\usbh_diskio.h">
       <Filter>FatFS</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\FlashDrive\FlashDrive.h">
-      <Filter>FlashDrive</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Hardware\FLASH.h">
-      <Filter>Hardware</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Hardware\FSMC.h">
-      <Filter>Hardware</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Hardware\Hardware.h">
-      <Filter>Hardware</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Hardware\Timer.h">
-      <Filter>Hardware</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\libs\ffconf.h">
-      <Filter>libs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\libs\stm32f2xx_hal_conf.h">
-      <Filter>libs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\libs\stm32f2xx_it.h">
-      <Filter>libs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\libs\usbh_conf.h">
-      <Filter>libs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Panel\Controls.h">
-      <Filter>Panel</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Panel\Panel.h">
-      <Filter>Panel</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Settings\Settings.h">
-      <Filter>Settings</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Settings\SettingsTypes.h">
-      <Filter>Settings</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\defines.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\globals.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\main.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\common\Utils\Math.h">
+    <ClInclude Include="..\..\libs\common\Utils\Math.h">
       <Filter>Utils</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\FPGA\FPGATypes.h">
+    <ClInclude Include="..\..\Loader53\src\Display\Colors.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Panel\Controls.h">
+      <Filter>Panel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\Display.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\defines.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\DisplayTypes.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\libs\ffconf.h">
+      <Filter>libs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Hardware\FLASH.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\FlashDrive\FlashDrive.h">
+      <Filter>FlashDrive</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\font\Font.h">
+      <Filter>Display\fonts</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\FPGA\FPGATypes.h">
       <Filter>FPGA</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\S8-53\Boot53\Settings\SettingsMath.h">
+    <ClInclude Include="..\..\Loader53\src\Hardware\FSMC.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\globals.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Hardware\Hardware.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\main.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\Painter.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\PainterC.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Display\PainterText.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Panel\Panel.h">
+      <Filter>Panel</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Settings\Settings.h">
       <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Settings\SettingsMath.h">
+      <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Settings\SettingsTypes.h">
+      <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\libs\stm32f2xx_hal_conf.h">
+      <Filter>libs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\libs\stm32f2xx_it.h">
+      <Filter>libs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\Hardware\Timer.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Loader53\src\libs\usbh_conf.h">
+      <Filter>USBH</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\ctype.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\integer.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\inttypes.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\limits.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\math.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\stdarg.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\stdint.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\stdio.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\stdlib.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\string.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\tchar.h">
+      <Filter>_VS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\_VS\windows.h">
+      <Filter>_VS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\_libs\forVS\algorithm">
       <Filter>forVS</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\font5.inc">
+    <None Include="..\..\Loader53\src\Display\font\font5.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\font5display.inc">
+    <None Include="..\..\Loader53\src\Display\font\font5display.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\font8.inc">
+    <None Include="..\..\Loader53\src\Display\font\font8.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\font8display.inc">
+    <None Include="..\..\Loader53\src\Display\font\font8display.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\fontUGO.inc">
+    <None Include="..\..\Loader53\src\Display\font\fontUGO.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\fontUGO2.inc">
+    <None Include="..\..\Loader53\src\Display\font\fontUGO2.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\fontUGO2display.inc">
+    <None Include="..\..\Loader53\src\Display\font\fontUGO2display.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\Display\font\fontUGOdisplay.inc">
+    <None Include="..\..\Loader53\src\Display\font\fontUGOdisplay.inc">
       <Filter>Display\fonts</Filter>
     </None>
-    <None Include="..\..\..\S8-53\Boot53\libs\startup_stm32f207xx.s">
+    <None Include="..\..\Loader53\src\libs\startup_stm32f207xx.s">
       <Filter>libs</Filter>
     </None>
   </ItemGroup>
