--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -947,6 +947,9 @@
             </File>
           </Files>
         </Group>
+        <Group>
+          <GroupName>VCP</GroupName>
+        </Group>
       </Groups>
     </Target>
   </Targets>
